--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@
               <li class="active"><a href="#">Home</a></li>
               <li><a href="#about">About</a></li>
               <li><a href="#contact">Contact</a></li>
+			  <li class="pull-right">
+				<input type="text" class="search-query " placeholder="Search">
+			  </li>			  
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -201,7 +204,7 @@
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="http://d24w6bsrhbeh9d.cloudfront.net/photo/amX0p1o_460s_v1.jpg">
+          <img class="img-polaroid" src="test.jpg">
         </div>
         <div class="span5 copy">
           <p>
