--- a/index.html
+++ b/index.html
@@ -113,15 +113,15 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="#">Bitstarter</a>
+          <a class="brand" href="#">Metime</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
               <li><a href="#about">About</a></li>
               <li><a href="#contact">Contact</a></li>
-			  <li class="pull-right">
-				<input type="text" class="search-query " placeholder="Search">
-			  </li>			  
+			  <form class="navbar-search pull-right dropdown">
+                    <input id="searchText" type="text" class="search-query dropdown-toggle" placeholder="Search" autocomplete="off">
+                </form>		  
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -187,7 +187,7 @@
           <div class="span6 offset3 order">
             <!-- Standard Bootstrap button. -->
             <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-            <button class="btn btn-success btn-large">Preorder</button>
+            <a class="coinbase-button" data-code="43d006c7308811a103353231fbbe0a46" data-button-style="custom_large" href="https://coinbase.com/checkouts/43d006c7308811a103353231fbbe0a46">Pay With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
           </div>
           <div class="span8 offset2 social">
             <!-- Social buttons are not included in default Bootstrap. -->
